# wxkb-switch

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile.in  LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac  configure~
include/: shm.h
man/: wxkb-switch.1  wxkb_switch.1
scripts/: _wxkb-switch  _wxkb_switch  build-all-packages.sh  wxkb-switch.fish  wxkb-switch.sh  wxkb_switch.fish  wxkb_switch.sh
src/: main.c  shm.c  trash.c
